Finishes (I think) bike parts, adds tests and controller